# a-maze-ing

./: .gitignore  Makefile  README.md  a-maze-ing.py  a_maze_ing.py  am.py  config.txt  exception.py  file.txt  gen.py  main.py  maze.txt  mazegen-1.0.0-py3-none-any.whl  output_maze.txt  output_maze_matisse.txt  pyproject.toml  solver.py  test.py  visualiseur_rapide.py
src/: exception.py  solver.py  utils.py
src/mazegen/: __init__.py  drawing_mlx.py  generation.py  solver.py  utils.py
src/mazegen/mlx/: mlx_renderer.py  mlx_utils.py
src/mlx/: mlx_image.py  mlx_renderer.py  mlx_utils.py
src/mlx_maze/: mlx_image.py  mlx_renderer.py  mlx_utils.py
test/: main.py
tests/: test_maze_logo_42.py  test_maze_seed.py  test_maze_size.py  test_solver.py  test_solver_nopath.py
