[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mazegen"
version = "1.0.0"
authors = [
  { name="pdauga", email="pdauga@student.42lyon.fr" },
  { name="mboutte", email="mboutte@student.42lyon.fr" },
]
description = "None"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://projects.intra.42.fr/a-maze-ing/mboutte"

[tool.hatch.build.targets.wheel]
# packages = ["mazegen"]
