[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mazegen"
version = "1.0.0"
authors = [
  { name="pdauga", email="pdauga@student.42lyon.fr" },
  { name="mboutte", email="mboutte@student.42lyon.fr" },
]
description = "None"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow>=10.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "mypy",
    "snakeviz"
]

[project.urls]
"Homepage" = "https://projects.intra.42.fr/a-maze-ing/mboutte"

[tool.hatch.build.targets.wheel]
packages = ["src/mazegen"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
mypy_path = "src"
files = ["src"]

[[tool.mypy.overrides]]
module = "mlx.*"
ignore_missing_imports = true
